--- a/bifangfront/src/components/header/index.less
+++ b/bifangfront/src/components/header/index.less
@@ -20,7 +20,7 @@
     }
   }
   .admin-header-wide{
-    padding-left: 24px;
+    padding: 0 24px;
     &.head.fixed{
       max-width: 1400px;
       margin: auto;
